# HaumeaCupons

./: .env.example  .firebaserc  .gitignore  AUDITORIA_TECNICA.md  DEPLOY_PROMPT_SERVIDOR.md  OPERACAO_SEGURA.md  README.md  app.py  config.py  data.json  firebase.json  firebase_setup.py  firestore.rules  hermes_notify.py  main.py  migrate_products.py  offers.py  pyproject.toml  storage.py  test_sim.py  tunnel.sh  verifier.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  firebase.ts  index.css  main.tsx  types.ts
frontend/src/components/: ChatGroupsPanel.tsx  ConfirmDialog.tsx  FindingsTable.tsx  Footer.tsx  Header.tsx  LogsPanel.tsx  Overview.tsx  ProductsPanel.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Register.tsx
ops/: check_config.py  cleanup_ruleless_findings.py  grant_admin.py  haumea-cupons-bot.service  haumea-cupons-healthcheck.sh
templates/: index.html
