[project]
name = "haumea-cupons"
version = "0.1.0"
description = "Telethon bot for coupon monitoring and verification."
requires-python = ">=3.10"
dependencies = [
    "telethon",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "lxml",
    "fastapi",
    "uvicorn[std]",
    "httpx",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
