[project]
name = "haumea-cupons"
version = "0.1.0"
description = "Telethon bot for coupon monitoring and verification."
requires-python = ">=3.10"
dependencies = [
    "telethon",
    "python-dotenv",
    "aiohttp",
    "beautifulsoup4",
    "lxml",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "pytest",
    "firebase-admin",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
py-modules = ["app", "config", "firebase_setup", "main", "storage", "verifier"]
